# hydra

./: CMakeLists.txt  Cargo.toml  README.md  TODO.md  index.html
assets/: example3_shader.wgsl  example3_shader_challenge.wgsl  example4_shader.wgsl  example5_shader.wgsl  example6_shader.wgsl  example7_shader.wgsl  example8_challenge.wgsl  example9_shader.wgsl
examples/: example10_ui.rs  example1_window.rs  example2_challenge.rs  example2_init_wgpu.rs  example2_renderpass.rs  example3_challenge.rs  example3_graphics_pipeline.rs  example4_buffers.rs  example4_buffers2.rs  example4_challenge.rs  example5_challenge.rs  example5_textures.rs  example6_camera.rs  example6_camera2.rs  example6_uniforms.rs  example7_challenge.rs  example7_instancing.rs  example8_challenge.rs  example8_depth.rs  example9_mesh.rs
src/: app.rs  camera.rs  context.rs  instance.rs  lib.rs  main.cpp  main.rs  mesh.rs  pipeline.rs  shader.wgsl  shader3.wgsl  shader4.wgsl  shader5.wgsl  texture.rs  ui.rs  vertex.rs
src/backends/wgpu/: init.cpp  init.h
src/base/: app.rs  mod.rs  pipeline.rs  texture.rs
src/core/: camera.rs  mesh.rs  mod.rs  settings.h  settings.h.in  ui.rs
src/util/: context.rs
