[package]
name = "hydra"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { version = "0.30.2", features = ["rwh_06"] } #windowing
wgpu = "0.20.1" #wgpu itself
env_logger = "0.11.3" #logging for wgpu debugging
pollster = "0.3" #block on async functions
colored = "2.1.0" #prettier more convenient logging